// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MonthPicker should render component 1`] = `
<div
  className="tribe-editor__month-picker test-class"
>
  <div
    className="css-10nd86i tribe-editor__select tribe-editor__month-picker__select"
    onKeyDown={[Function]}
  >
    <div
      className="css-vj8t7z tribe-editor__select__control"
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
    >
      <div
        className="css-1hwfws3 tribe-editor__select__value-container tribe-editor__select__value-container--is-multi"
      >
        <div
          className="css-1492t68 tribe-editor__select__placeholder"
        >
          Select...
        </div>
        <div
          className="css-1g6gooi"
        >
          <div
            className="tribe-editor__select__input"
            style={
              Object {
                "display": "inline-block",
              }
            }
          >
            <input
              aria-autocomplete="list"
              autoCapitalize="none"
              autoComplete="off"
              autoCorrect="off"
              disabled={false}
              id="react-select-2-input"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              spellCheck="false"
              style={
                Object {
                  "background": 0,
                  "border": 0,
                  "boxSizing": "content-box",
                  "color": "inherit",
                  "fontSize": "inherit",
                  "opacity": 1,
                  "outline": 0,
                  "padding": 0,
                  "width": "1px",
                }
              }
              tabIndex="0"
              theme={
                Object {
                  "borderRadius": 4,
                  "colors": Object {
                    "danger": "#DE350B",
                    "dangerLight": "#FFBDAD",
                    "neutral0": "hsl(0, 0%, 100%)",
                    "neutral10": "hsl(0, 0%, 90%)",
                    "neutral20": "hsl(0, 0%, 80%)",
                    "neutral30": "hsl(0, 0%, 70%)",
                    "neutral40": "hsl(0, 0%, 60%)",
                    "neutral5": "hsl(0, 0%, 95%)",
                    "neutral50": "hsl(0, 0%, 50%)",
                    "neutral60": "hsl(0, 0%, 40%)",
                    "neutral70": "hsl(0, 0%, 30%)",
                    "neutral80": "hsl(0, 0%, 20%)",
                    "neutral90": "hsl(0, 0%, 10%)",
                    "primary": "#2684FF",
                    "primary25": "#DEEBFF",
                    "primary50": "#B2D4FF",
                    "primary75": "#4C9AFF",
                  },
                  "spacing": Object {
                    "baseUnit": 4,
                    "controlHeight": 38,
                    "menuGutter": 8,
                  },
                }
              }
              type="text"
              value=""
            />
            <div
              style={
                Object {
                  "height": 0,
                  "left": 0,
                  "overflow": "scroll",
                  "position": "absolute",
                  "top": 0,
                  "visibility": "hidden",
                  "whiteSpace": "pre",
                }
              }
            >
              
            </div>
          </div>
        </div>
      </div>
      <div
        className="css-1wy0on6 tribe-editor__select__indicators"
      >
        <div
          aria-hidden="true"
          className="css-1ep9fjw tribe-editor__select__indicator tribe-editor__select__dropdown-indicator"
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
        >
          <span
            className="tribe-editor__select__dropdown-indicator"
          >
            arrow-down
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`MonthPicker should render month tags 1`] = `
<div
  className="tribe-editor__month-picker test-class"
>
  <button
    className="tribe-editor__month-tag tribe-editor__month-picker__month-tag"
    onClick={[MockFunction]}
  >
    <<svg>icon mock</svg> />
    <span
      className="tribe-editor__month-tag__remove"
    >
      Remove
    </span>
    Jul
  </button>
  <button
    className="tribe-editor__month-tag tribe-editor__month-picker__month-tag"
    onClick={[MockFunction]}
  >
    <<svg>icon mock</svg> />
    <span
      className="tribe-editor__month-tag__remove"
    >
      Remove
    </span>
    Sep
  </button>
  <div
    className="css-10nd86i tribe-editor__select tribe-editor__month-picker__select"
    onKeyDown={[Function]}
  >
    <div
      className="css-vj8t7z tribe-editor__select__control"
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
    >
      <div
        className="css-1hwfws3 tribe-editor__select__value-container tribe-editor__select__value-container--is-multi tribe-editor__select__value-container--has-value"
      >
        <div
          className="css-xwjg1b tribe-editor__select__multi-value"
        >
          <div
            className="css-12jo7m5 tribe-editor__select__multi-value__label"
          >
            July
          </div>
          <div
            className="css-1alnv5e tribe-editor__select__multi-value__remove"
            onClick={[Function]}
            onMouseDown={[Function]}
            onTouchEnd={[Function]}
          >
            <svg
              aria-hidden="true"
              className="css-19bqh2r"
              focusable="false"
              height={14}
              viewBox="0 0 20 20"
              width={14}
            >
              <path
                d="M14.348 14.849c-0.469 0.469-1.229 0.469-1.697 0l-2.651-3.030-2.651 3.029c-0.469 0.469-1.229 0.469-1.697 0-0.469-0.469-0.469-1.229 0-1.697l2.758-3.15-2.759-3.152c-0.469-0.469-0.469-1.228 0-1.697s1.228-0.469 1.697 0l2.652 3.031 2.651-3.031c0.469-0.469 1.228-0.469 1.697 0s0.469 1.229 0 1.697l-2.758 3.152 2.758 3.15c0.469 0.469 0.469 1.229 0 1.698z"
              />
            </svg>
          </div>
        </div>
        <div
          className="css-xwjg1b tribe-editor__select__multi-value"
        >
          <div
            className="css-12jo7m5 tribe-editor__select__multi-value__label"
          >
            September
          </div>
          <div
            className="css-1alnv5e tribe-editor__select__multi-value__remove"
            onClick={[Function]}
            onMouseDown={[Function]}
            onTouchEnd={[Function]}
          >
            <svg
              aria-hidden="true"
              className="css-19bqh2r"
              focusable="false"
              height={14}
              viewBox="0 0 20 20"
              width={14}
            >
              <path
                d="M14.348 14.849c-0.469 0.469-1.229 0.469-1.697 0l-2.651-3.030-2.651 3.029c-0.469 0.469-1.229 0.469-1.697 0-0.469-0.469-0.469-1.229 0-1.697l2.758-3.15-2.759-3.152c-0.469-0.469-0.469-1.228 0-1.697s1.228-0.469 1.697 0l2.652 3.031 2.651-3.031c0.469-0.469 1.228-0.469 1.697 0s0.469 1.229 0 1.697l-2.758 3.152 2.758 3.15c0.469 0.469 0.469 1.229 0 1.698z"
              />
            </svg>
          </div>
        </div>
        <div
          className="css-1g6gooi"
        >
          <div
            className="tribe-editor__select__input"
            style={
              Object {
                "display": "inline-block",
              }
            }
          >
            <input
              aria-autocomplete="list"
              autoCapitalize="none"
              autoComplete="off"
              autoCorrect="off"
              disabled={false}
              id="react-select-3-input"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              spellCheck="false"
              style={
                Object {
                  "background": 0,
                  "border": 0,
                  "boxSizing": "content-box",
                  "color": "inherit",
                  "fontSize": "inherit",
                  "opacity": 1,
                  "outline": 0,
                  "padding": 0,
                  "width": "1px",
                }
              }
              tabIndex="0"
              theme={
                Object {
                  "borderRadius": 4,
                  "colors": Object {
                    "danger": "#DE350B",
                    "dangerLight": "#FFBDAD",
                    "neutral0": "hsl(0, 0%, 100%)",
                    "neutral10": "hsl(0, 0%, 90%)",
                    "neutral20": "hsl(0, 0%, 80%)",
                    "neutral30": "hsl(0, 0%, 70%)",
                    "neutral40": "hsl(0, 0%, 60%)",
                    "neutral5": "hsl(0, 0%, 95%)",
                    "neutral50": "hsl(0, 0%, 50%)",
                    "neutral60": "hsl(0, 0%, 40%)",
                    "neutral70": "hsl(0, 0%, 30%)",
                    "neutral80": "hsl(0, 0%, 20%)",
                    "neutral90": "hsl(0, 0%, 10%)",
                    "primary": "#2684FF",
                    "primary25": "#DEEBFF",
                    "primary50": "#B2D4FF",
                    "primary75": "#4C9AFF",
                  },
                  "spacing": Object {
                    "baseUnit": 4,
                    "controlHeight": 38,
                    "menuGutter": 8,
                  },
                }
              }
              type="text"
              value=""
            />
            <div
              style={
                Object {
                  "height": 0,
                  "left": 0,
                  "overflow": "scroll",
                  "position": "absolute",
                  "top": 0,
                  "visibility": "hidden",
                  "whiteSpace": "pre",
                }
              }
            >
              
            </div>
          </div>
        </div>
      </div>
      <div
        className="css-1wy0on6 tribe-editor__select__indicators"
      >
        <div
          aria-hidden="true"
          className="css-1ep9fjw tribe-editor__select__indicator tribe-editor__select__dropdown-indicator"
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
        >
          <span
            className="tribe-editor__select__dropdown-indicator"
          >
            arrow-down
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
